# GenshinWishFetch

./: CMakeLists.txt  LICENSE.txt  README.md
GenshinWishFetch/: CMakeLists.txt  DataFile.cpp  GachaDataObjects.h  GenshinWishFetch.cpp  GenshinWishFetch.h  InteractiveSession.cpp  QueryGachaHistory.cpp  RegionedVariables.cpp  UrlProcessing.cpp  platform.h
GenshinWishFetch/win/: CMakeLists.txt  platform.h  platformwin.cpp
